tests/sources/invalid/classes/class_method_syntax_errors.fire
// Malformed method declarations inside a class body (distinct from the
// constructor-parsing equivalents in constructor_param_syntax_errors.fire).

// Missing type after ':' for a field in class body.
class M1 {
    v: int32;
    v2: !;  //~ ERROR FS-PARSE-0010 @9

    fn M1() {
        this.v = 1;
    }
}

// A static regular method also can't declare a '&this' receiver.
class M2 {
    v: int32;

    fn M2() {
        this.v = 1;
    }

    static fn get(&this) -> int32 {  //~ ERROR FS-PARSE-0012 @20
        return 1;
    }
}
